@@ -1,0 +1,40 @@
+/*-
+ * Copyright (C) 2011 Glenn Ergeerts.
+ * 
+ * This program is free software: you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by the
+ * Free Software Foundation, either version 3 of the License, or (at your
+ * option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+ * more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ * 
+ * $Id$
+ */
+
+#ifndef __ERR_H__
+#define __ERR_H__
+
+#include <stdlib.h>
+
+#define warnx(...) do { \
+	fprintf (stderr, __VA_ARGS__); \
+	fprintf (stderr, "\n"); \
+} while (0)
+
+#define errx(code, ...) do { \
+	fprintf (stderr, __VA_ARGS__); \
+	fprintf (stderr, "\n"); \
+	exit (code); \
+} while (0)
+
+/* FIXME: warn / err are supposed to display errno's message */
+#define warn  warnx
+#define err   errx
+
+#endif /* !__ERR_H__ */
